// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Formatted Address should not render without address 1`] = `
<div>
  <div
    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
  />
</div>
`;

exports[`Formatted Address should render address only 1`] = `
<div>
  <div
    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
  >
    <span
      class="inline-flex overflow-hidden text-base font-semibold text-theme-text"
      data-testid="Address__address"
    >
      ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address should render with normal font 1`] = `
<div>
  <div
    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
  >
    <span
      class="text-base font-normal text-theme-text"
      data-testid="Address__alias"
    >
      <span
        class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
        data-testid="TruncateEnd"
      >
        Sample Wallet
      </span>
    </span>
    <span
      class="inline-flex overflow-hidden text-base font-normal text-theme-secondary-500 dark:text-theme-secondary-700"
      data-testid="Address__address"
    >
      ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address should render with wallet name 1`] = `
<div>
  <div
    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
  >
    <span
      class="text-base font-semibold text-theme-text"
      data-testid="Address__alias"
    >
      <span
        class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
        data-testid="TruncateEnd"
      >
        Sample Wallet
      </span>
    </span>
    <span
      class="inline-flex overflow-hidden text-base font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      data-testid="Address__address"
    >
      ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
    </span>
  </div>
</div>
`;
